k8s/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deploy
  template:
    metadata:
      labels:
        app: mysql-deploy
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.23
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql-deploy
  namespace: test
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql-port
  selector:
    app: mysql-deploy
  type: ClusterIP
