k8s/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-library-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8881
      name: http
      protocol: HTTP
    hosts:
    - "*"
